# svg2pdf

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/src/: args.rs  convert.rs  fonts.rs  main.rs
crates/svg2pdf/: Cargo.toml
crates/svg2pdf-cli/: Cargo.toml  build.rs
crates/svg2pdf-cli/src/: args.rs  main.rs
crates/svg2pdf/src/: lib.rs
crates/svg2pdf/src/render/: clip_path.rs  gradient.rs  group.rs  mask.rs  path.rs
crates/svg2pdf/src/util/: allocate.rs  context.rs  defer.rs  helper.rs
src/: color.rs  context.rs  defer.rs  lib.rs  main.rs  render.rs  scale.rs  transform.rs  util.rs
src/render/: clip.rs  clip_path.rs  filter.rs  gradient.rs  group.rs  image.rs  mask.rs  mod.rs  path.rs  pattern.rs  text.rs
src/render/pattern/: shaded_pattern.rs  tiled_pattern.rs
src/util/: allocate.rs  context.rs  defer.rs  helper.rs  mod.rs  resources.rs
src/write/: clip.rs  group.rs  mod.rs  path.rs  render.rs
tests/: .gitignore  Cargo.toml  README.md  gen-tests.py  jest.config.js  package-lock.json  package.json  run.js  tsconfig.json
tests/pdfium_lib/: .gitignore
tests/references/resvg/: LICENSE
tests/scripts/: common.py  gen-tests.py  gen-typst.py  sync-tests.py
tests/src/: api.rs  generate.rs  generate.ts  integration.rs  lib.rs  library.rs  render.rs  render.ts  run.ts  svg.test.ts  test.rs  tests.rs  typst.rs  util.ts
tests/svgs/: README.md
