[workspace]
members = ["cli", "tests"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.9.1"
authors = ["Martin Haug <mhaug@live.de>", "Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition = "2021"
repository = "https://github.com/typst/svg2pdf"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
svg2pdf = { path = ".", version = "0.9.1", default-features = false }
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.3"
clap_mangen = "0.2.14"
fontdb = "0.16.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
miniz_oxide = "0.7"
once_cell = "1.18.0"
oxipng = { version = "9", default-features = false, features = ["filetime", "parallel", "zopfli"] }
pdf-writer = "0.9"
pdfium-render = "0.8.6"
termcolor = "1.2"
usvg = { version = "0.40", default-features = false, features = ["text"] }
tiny-skia = "0.11.4"
resvg = "0.40"

[package]
name = "svg2pdf"
description = "Convert SVG files to PDFs."
categories = ["encoding", "graphics", "multimedia"]
keywords = ["svg", "pdf", "vector-graphics", "conversion"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
bench = false

[features]
default = ["image", "filters"]
image = ["dep:image"]
filters = ["image", "dep:tiny-skia", "dep:resvg"]

[dependencies]
miniz_oxide = { workspace = true }
once_cell = { workspace = true }
pdf-writer = { workspace = true }
usvg = { workspace = true }
image = { workspace = true, optional = true }
tiny-skia = {workspace = true, optional = true}
resvg = {workspace = true, optional = true}
