[workspace]
members = ["cli", "tests"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.9.1"
authors = ["Laurenz Stampfl <laurenz.stampfl@gmail.com>", "Martin Haug <mhaug@live.de>"]
edition = "2021"
repository = "https://github.com/typst/svg2pdf"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
log = "0.4.20"
svg2pdf = { path = ".", default-features = false, version = "0.9.1" }
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.3"
clap_mangen = "0.2.14"
fontdb = "0.16.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
miniz_oxide = "0.7"
once_cell = "1.18.0"
oxipng = { version = "9", default-features = false, features = ["filetime", "parallel", "zopfli"] }
pdf-writer = "0.9"
pdfium-render = "0.8.6"
termcolor = "1.2"
usvg = { git = "https://github.com/RazrFalcon/resvg", default-features = false }
tiny-skia = "0.11.4"
unicode-properties = "0.1.1"
resvg = { git = "https://github.com/RazrFalcon/resvg", default-features = false }
subsetter = "0.1.1"
ttf-parser = { version = "0.20.0" }
siphasher = { version = "1.0.1"}

[package]
name = "svg2pdf"
description = "Convert SVG files to PDFs."
categories = ["encoding", "graphics", "multimedia"]
keywords = ["svg", "pdf", "vector-graphics", "conversion"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
bench = false

[features]
default = ["image", "filters", "text"]
text = ["usvg/text", "resvg/text", "dep:siphasher",
    "dep:subsetter", "dep:ttf-parser", "dep:unicode-properties",
    "dep:fontdb"]
image = ["dep:image"]
filters = ["image", "dep:tiny-skia", "resvg/raster-images"]

[dependencies]
unicode-properties = { workspace = true, optional = true }
miniz_oxide = { workspace = true }
once_cell = { workspace = true }
pdf-writer = { workspace = true }
fontdb = { workspace = true, optional = true}
usvg = { workspace = true }
log = { workspace = true }
image = { workspace = true, optional = true }
tiny-skia = {workspace = true, optional = true }
resvg = {workspace = true, optional = true }
subsetter = { workspace = true, optional = true }
ttf-parser = { workspace = true, optional = true }
siphasher = { workspace = true, optional = true }

