[package]
name = "svg2pdf-tests"
description = "The tests crate for svg2pdf."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

#[[bin]]
#name = "generate"
#path = "src/generate.rs"
#test = false

[dependencies]
fontdb = { workspace = true }
svg2pdf = { workspace = true }
usvg = { workspace = true }
pdfium-render = { workspace = true, features = ["sync"] }
walkdir = { workspace = true }
lazy_static = { workspace = true }
pdf-writer = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
oxipng = { workspace = true }
clap = { workspace = true }
termcolor = { workspace = true }
regex = { workspace = true }
once_cell.workspace = true
