[package]
name = "svg2pdf-tests"
description = "The tests crate for svg2pdf."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
fontdb = { workspace = true }
svg2pdf = { workspace = true }
usvg = { workspace = true }
pdfium-render = { workspace = true, features = ["sync"] }
pdf-writer = { workspace = true }
image = { workspace = true }
oxipng = { workspace = true }
once_cell = { workspace = true }
