[package]
name = "svg2pdf"
description = "Convert SVG files to PDFs."
categories = ["encoding", "graphics", "multimedia"]
keywords = ["svg", "pdf", "vector-graphics", "conversion"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false
bench = false

[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
miniz_oxide = "0.7"
pdf-writer = "0.9"
usvg = { version = "0.36", default-features = false }
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "png",
  "gif",
], optional = true }

[dev-dependencies]
usvg = { version = "0.36.0" }